--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="manifest" href="manifest.json">
     <title>Sítio São Sebastião - Sincronizador DG500</title>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
@@ -11,79 +12,58 @@
     <style>
         :root { --accent: #3b82f6; --glass: rgba(15, 23, 42, 0.9); --border: rgba(255, 255, 255, 0.1); }
         body { font-family: 'Inter', sans-serif; background: #020617; color: white; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
-        .admin-card { background: var(--glass); padding: 30px; border-radius: 24px; border: 1px solid var(--border); text-align: center; width: 90%; max-width: 450px; backdrop-filter: blur(20px); }
-        .drop-zone { border: 2px dashed #3b82f6; padding: 40px 20px; border-radius: 16px; cursor: pointer; margin: 20px 0; background: rgba(59, 130, 246, 0.05); }
-        .btn-import { width: 100%; height: 55px; background: linear-gradient(135deg, #1d4ed8 0%, #3b82f6 100%); color: white; border: none; border-radius: 12px; font-weight: 800; text-transform: uppercase; cursor: pointer; }
-        #status { margin-top: 15px; font-size: 11px; color: #94a3b8; white-space: pre-wrap; text-align: left; }
+        .admin-card { background: var(--glass); padding: 30px; border-radius: 30px; border: 1px solid var(--border); width: 90%; max-width: 400px; text-align: center; }
+        .upload-area { border: 2px dashed #334155; padding: 40px 20px; border-radius: 20px; cursor: pointer; margin: 20px 0; transition: 0.3s; }
+        .upload-area:hover { border-color: var(--accent); background: rgba(59, 130, 246, 0.05); }
+        #status { font-size: 14px; margin-top: 15px; color: #94a3b8; line-height: 1.6; }
     </style>
 </head>
 <body>
-
 <div class="admin-card">
-    <img src="imagen.png" style="width:80px; mix-blend-mode:lighten; margin-bottom:15px;">
-    <h2 style="font-weight:900; color:var(--accent); margin:0;">SINCRONIZAR DG500</h2>
-    
-    <div class="drop-zone" onclick="document.getElementById('file-input').click()">
-        <span id="label">SELECIONAR PASTA COM OS CSVs</span>
-        <input type="file" id="file-input" multiple webkitdirectory directory style="display:none;">
+    <h2 style="margin:0; font-weight:900;">SUBIR DADOS</h2>
+    <p style="color:var(--accent); font-size:12px; font-weight:700; margin-bottom:20px;">COLETOR DG500</p>
+    <div class="upload-area" onclick="document.getElementById('csvFiles').click()">
+        <span style="font-size:40px;">📁</span>
+        <p style="margin:10px 0 0; font-weight:600;">Selecionar Arquivos CSV</p>
+        <input type="file" id="csvFiles" multiple accept=".csv" style="display:none" onchange="handleFiles(this.files)">
     </div>
-
-    <button class="btn-import" onclick="processFiles()">Enviar para o Painel</button>
-    <div id="status"></div>
-    <a href="index.html" style="display: block; margin-top: 20px; color: #64748b; text-decoration: none; font-size: 10px; font-weight: 800; text-transform: uppercase;">← Voltar ao Dashboard</a>
+    <div id="status">Selecione os arquivos gerados pela DG500.</div>
+    <button onclick="window.location.href='index.html'" style="margin-top:20px; background:none; border:none; color:#64748b; font-weight:700; cursor:pointer;">Voltar</button>
 </div>
 
+<script src="config.js"></script>
 <script>
-    const costs = { 'BAGAÇO DE CANA': 0.10, 'BOLACHA': 0.95, 'SOJA': 1.38, 'MANDIOCA': 0.10, 'LARANJA': 0.06, 'SAL': 3.16, 'UREIA': 2.90, 'SILO': 0.20 };
-    const aliasMap = { 'BAG': 'BAGAÇO DE CANA', 'BOL': 'BOLACHA', 'S': 'SAL', 'M': 'MANDIOCA', 'L': 'LARANJA' };
-
-    const firebaseConfig = { apiKey: "AIzaSyBP_0G13P-jJAaZe0XFi_0Mtp3l02-cAc4", authDomain: "fazenda-e5e25.firebaseapp.com", projectId: "fazenda-e5e25", storageBucket: "fazenda-e5e25.firebasestorage.app", messagingSenderId: "531227081563", appId: "1:531227081563:web:391f17caa7e7be090d387e" };
+    const firebaseConfig = {
+        apiKey: "AIzaSyBP_0G13P-jJAaZe0XFi_0Mtp3l02-cAc4",
+        authDomain: "fazenda-e5e25.firebaseapp.com",
+        projectId: "fazenda-e5e25",
+        storageBucket: "fazenda-e5e25.firebasestorage.app",
+        messagingSenderId: "531227081563",
+        appId: "1:531227081563:web:391f17caa7e7be090d387e"
+    };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    // Garante que o usuário está logado antes de processar
-    let currentUser = null;
-    firebase.auth().onAuthStateChanged(user => { 
-        if (!user) window.location.href = "login.html"; 
-        else currentUser = user;
-    });
-
-    async function processFiles() {
-        const input = document.getElementById('file-input');
+    async function handleFiles(files) {
         const status = document.getElementById('status');
-        if (!currentUser) { status.innerText = "❌ Erro: Você não está autenticado!"; return; }
-        if (input.files.length === 0) { status.innerText = "❌ Selecione a pasta!"; return; }
-
-        status.innerText = "⏳ Lendo arquivos...";
         let count = 0;
-
-        for (let file of input.files) {
-            if (!file.name.toLowerCase().endsWith('.csv')) continue;
-
+        for (let file of files) {
             const text = await file.text();
-            const lines = text.split(/\r?\n/);
-            
-            let dataFormatada = "";
-            let idReceita = "";
-            let items = [];
-            let readingComponents = false;
-            let totalP = 0, totalR = 0, totalLoss = 0;
+            const lines = text.split('\n');
+            let dataFormatada = "", idReceita = "", totalP = 0, totalR = 0, totalLoss = 0, items = [], isComponentSection = false;
 
             for (let line of lines) {
                 const col = line.split(';');
-
-                // Captura Data e ID da Receita (baseado na linha 5 do seu arquivo)
-                if (col.length >= 4 && col[3].includes('/')) {
-                    const rawDate = col[3].trim().split('/');
+                if (line.includes("Id;ID da receita")) {
+                    const info = lines[lines.indexOf(line) + 1].split(';');
+                    idReceita = info[1];
+                    let rawDate = info[3].split('/');
                     dataFormatada = `${rawDate[2]}-${rawDate[1].padStart(2,'0')}-${rawDate[0].padStart(2,'0')}`;
-                    idReceita = col[1].trim();
                 }
+                if (line.includes("Dados dos componentes")) { isComponentSection = true; continue; }
+                if (isComponentSection && (line.trim() === "" || line.includes("Data;Início"))) { isComponentSection = false; continue; }
 
-                if (line.includes("Dados dos componentes")) { readingComponents = true; continue; }
-                if (readingComponents && (line.trim() === "" || line.includes("Data;"))) { readingComponents = false; }
-
-                // Captura os itens (baseado na linha 11 do seu arquivo)
-                if (readingComponents && col.length >= 4 && !isNaN(parseFloat(col[2]))) {
+                if (isComponentSection && col.length >= 4 && !isNaN(parseFloat(col[2].replace(',', '.')))) {
                     let rawName = col[1].trim().toUpperCase();
                     let nomeReal = aliasMap[rawName] || rawName;
                     let p = parseFloat(col[2].replace(',', '.')) || 0;
@@ -91,7 +71,6 @@
                     let diff = Math.abs(p - r);
                     let preco = costs[nomeReal] || 0;
                     let loss = diff * preco;
-
                     totalP += p; totalR += r; totalLoss += loss;
                     items.push({ name: nomeReal, p, r, diff, loss });
                 }
@@ -99,23 +78,17 @@
 
             if (dataFormatada && items.length > 0) {
                 try {
-                    await db.collection("auditoria").add({
-                        date: dataFormatada,
-                        id: parseInt(idReceita),
-                        totalP, totalR, totalLoss,
-                        items,
-                        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                    });
+                    await db.collection("auditoria").add({ date: dataFormatada, id: parseInt(idReceita), totalP, totalR, totalLoss, items, timestamp: firebase.firestore.FieldValue.serverTimestamp() });
                     count++;
-                    status.innerText = `⏳ Arquivos sincronizados: ${count}...`;
-                } catch (e) { 
-                    status.innerText = "❌ Erro de Permissão: " + e.message;
-                    return; 
-                }
+                } catch (e) { status.innerText = "Erro: " + e.message; return; }
             }
         }
         status.innerHTML = `<b style="color:#10b981;">✅ SUCESSO!</b><br>${count} tratos integrados.`;
         setTimeout(() => window.location.href = "index.html", 1500);
+    }
+
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('sw.js');
     }
 </script>
 </body>
