--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
     <div class="top-bar">
         <div class="logo-area">
-            <div class="logo-box"><img src="imagen.jpg"></div>
+            <div class="logo-box"><img src="imagen.png"></div>
             <h1>FAZENDA SÃO SEBASTIÃO</h1>
         </div>
         <div class="filtros">
@@ -112,4 +112,5 @@
 
     <script type="module" src="index.js"></script>
 </body>
+
 </html>
