Fix image source in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <div class="top-bar">
         <div class="logo-area">
-            <div class="logo-box"><img src="imagen.jpg"></div>
+            <div class="logo-box"><img src="imagen.png"></div>
             <h1>FAZENDA SÃO SEBASTIÃO</h1>
         </div>
         <div class="filtros">
@@ -116,4 +116,5 @@
     </div>
     <script type="module" src="index.js"></script>
 </body>
+
 </html>
